<resources>

    <string name="app_name">Vinacredit</string>
        
    <string name="external_dir">GetSignature</string>
    
    <!-- string of Splash -->
    <string name="txtSplash">Vinacredits Inc.</string>
    <string name="txtVina">Mobile Based Point of Sale System</string>
    
    
    <!-- string content Description ImageView -->
    <string name="imgView">ImageView</string>
    
    <!-- string of Welcome page -->
    <string name="txtWelcome_vina">Welcome to Vinacredit</string>
    <string name="txtWelcome_content">Free credit card reader Take your first payment today Nightly deposits to your bank</string>
    <string name="btnSignIn">Sign In</string>
    
    <string name="btnLanguageEnglish"></string>
    <string name="btnLanguageVietnam"></string>
    
    <!-- string of Sign In page -->
    <string name="txtTitleBarSignIn">Sign In</string>
    <string name="btnWrongPass">Forgot Password?</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    
    <!-- string of Wrong Pass page-->
    <string name="txtTitleBarWrongPass">Wrong Password</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSend">Send</string>

    <!-- string of Information Account page -->
    <string name="txtTitleBarInfor">Information</string>
    <string name="btnBack">Back</string>
    <string name="txtFirstname">First name</string>
    <string name="txtLastname">Last name</string>
    <string name="txtCompany">Company name</string>
    <string name="txtAddress">Address</string>
    <string name="txtEmail">Email</string>
    <string name="txtOldPass">Old pass</string>
    <string name="txtNewPass">New pass</string>
    <string name="txtConfirmPass">Confirm</string>
    <string name="btnContinue">Continue</string>
    <string name="Email">Email</string>
    <string name="OldPass">Old pass</string>
    <string name="NewPass">New pass</string>
    <string name="ConfirmPass">Confirm</string>

    <!-- string of Account page -->
    <string name="txtTitleBarAccount">Account</string>
    <string name="btnSignOut">Sign Out</string>
    <string name="txtUsername">Username</string>
    <string name="txtTitle">Item</string>
    <string name="txtSubtitle">0</string>
    
    <!-- string of  Sale page -->
    <string name="txtTitleBarSale">Sale</string>
    <string name="btnSaleAccount">Account</string>
    <string name="btnSaleCharge">Charge</string>
    <string name="QuantityItem">1x</string>
    <string name="txtItem">0</string>
    <string name="txtSwipeCard">Swipe Card</string>
    
    <!-- string of Sales History page -->
    <string name="btnAccount">Account</string>
    <string name="txtTitleBarSalesHistory">Sales History</string>
    
    <!-- string of Detail Sale History page -->
    <string name="btnSaleHistory">SaleHistory</string>
    <string name="txtTitleBarDetailSalesHistory">Detail Sales</string>
    <string name="txtTotal">Total</string>
    <!-- string of Support page -->
    <string name="txtTitleBarSupport">Support</string>
    <string name="btnVinacredit">Vinacredit</string>
    <string name="btnHotline"># Hotline</string>
    <string name="btnInstruction">Instruction</string>
    
    <!-- string of Tax page -->
    <string name="txtTitleBarTax">Tax</string>
    <string name="txtAddSaleTax">Add Sale Tax</string>
    <string name="txtTaxRate">Tax Rate</string>
    <string name="txtTax">0 %</string>
    <string name="txtTaxName">Add a percentage to you payments to account for state taxes.</string>
    
    <!-- string of Charge page -->
    <string name="txtTitleBarCharge">Cash Payment</string>
    <string name="txtPay">0</string>
    <string name="txtChange">0</string>
    <string name="txtSumPrice">0</string>
    <string name="btnTenderCash">Tender Cash</string>
    <string name="btnSkip">Skip</string>
    <string name="txtLabelPayment">Total Payment</string>
    <string name="txtCashPaid">Cash Paid</string>
    <string name="txtChangePaid">Change</string>
    
    <!-- string of Identify page -->
    <string name="txtTitleBarIdentify">Identify</string>
    <string name="btnSignature">Signature</string>
    <string name="btnTakePhoto">Take Photo</string>
    
    <!-- string of Signature page -->
    <string name="btnIdentify">Identify</string>
    <string name="txtTitleBarSignature">Signature</string>
    <string name="btnSending">Sending</string>
    <string name="txtName">I agree to pay the amount above according to my card issues agreement</string>
    <string name="btnClear">Clear</string>
    
    <!-- string of Sending page -->
    <string name="txtTitleBarSending">Sending</string>
    <string name="btnReceipt">Receipt</string>
    
    <!-- string of Done page -->
    <string name="txtPaidThank">paid, Thank.</string>
    <string name="btnDone">Done</string>
    
    
    <string name="unknown_error">Unknown Error</string>
    <string name="nodevice">No Device</string>
    <string name="timeoutack">Time Out</string>
    <string name="second">\'s</string>
    <string name="de_len">Length Error = </string>
    <string name="str_confirm">Are you sign out?</string>
    <string name="str_clear">Are you clear?</string>
    <string name="str_ok">Yes</string>
    <string name="str_cancel">No</string>
    <string name="str_infor">Enter full infor,Please</string>
    <string name="str_image">No image</string>
    <string name="str_noImage">Picture could not be taken.</string>
    <string name="str_price">Enter price item > 100,Please!</string>
    <string name="str_email">Enter email,Please!</string>
    <string name="str_pass">Enter pass,Please!</string>
    <string name="str_inemail">Email incorrect,enter again.</string>
    <string name="str_sendOk">Send successful.</string>
    <string name="str_sendFail">Send fail.</string>
    <string name="str_skip">Skip</string>
    <string name="str_login">Login...</string>
    <string name="str_loginFail">Login unsuccessful</string>
    <string name="str_send">Sending...</string>
    <string name="str_check">Checking...</string>
    <string name="str_pic">Take your picture</string>
</resources>