<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintUsername"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSignIn" 
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnWrongPass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btnWrongPass" 
        android:layout_gravity="center_horizontal"/>

</LinearLayout>