<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout 
        android:id="@+id/relativelayout_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar"
        android:layout_marginBottom="4dip">
        
        <Button 
            android:id="@+id/btnBack"
            android:text="@string/btnBack"
            android:textColor="@color/white"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/button_back_pressed"/>
        
        <TextView 
            android:id="@+id/txtTitleBar"
            android:text="@string/txtTitleBarInfor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        
    </RelativeLayout>
    
	<ScrollView 
		android:id="@+id/relativeLayout1" 
		android:layout_width="fill_parent" 
		android:layout_margin = "4dip" 
		android:layout_height="fill_parent" 
		android:layout_marginLeft = "6dip"
		android:layout_below ="@id/relativelayout_title_bar">
        
		<RelativeLayout 
		    android:layout_width="match_parent" 
		    android:layout_height="wrap_content" >
		    
		<TextView
			android:id ="@+id/txtFirstname" 
			android:text = "@string/txtFirstname"			
			android:layout_width = "wrap_content" 
			android:layout_height = "wrap_content" 
			android:layout_below="@id/relativelayout_title_bar"
		/>
		<EditText
			android:id = "@+id/edtFirstname" 
			android:layout_below = "@id/txtFirstname" 
			android:inputType="textPersonName"
			android:hint = "@string/txtFirstname"
			android:layout_width = "fill_parent" 
			android:layout_height = "wrap_content"/>
		
		
		<TextView
			android:id ="@+id/txtLastname" 
			android:text="@string/txtLastname" 
			android:layout_below = "@id/edtFirstname"			
			android:layout_width = "wrap_content" 
			android:layout_height = "wrap_content"
		/>
		<EditText
			android:id = "@+id/edtLastname" 
			android:layout_below = "@id/txtLastname" 
			android:inputType="textPersonName"
			android:hint = "@string/txtLastname"
			android:layout_width = "fill_parent" 
			android:layout_height = "wrap_content"/>
		
		
		<TextView
			android:id ="@+id/txtCompany" 
			android:text = "@string/txtCompany" 
			android:layout_below = "@id/edtLastname"
			android:layout_width = "wrap_content" 
			android:layout_height = "wrap_content"
		/>
		<EditText
			android:id = "@+id/edtCompany" 
			android:layout_below = "@id/txtCompany"
			android:inputType="textPersonName" 
			android:hint= "@string/txtCompany"
			android:layout_width = "fill_parent" 
			android:layout_height = "wrap_content"/>
			
		<TextView
			android:id ="@+id/txtAddress" 
			android:text = "@string/txtAddress" 
			android:layout_below = "@id/edtCompany"
			android:layout_width = "wrap_content" 
			android:layout_height = "wrap_content"
		/>
		<EditText
			android:id = "@+id/edtAddress" 
			android:layout_below = "@id/txtAddress"
			android:hint = "@string/txtAddress"
			android:layout_width = "fill_parent" 
			android:layout_height = "wrap_content"/>
		<TextView
			android:id ="@+id/txtEmail" 			
			android:text = "@string/txtEmail" 
			android:layout_below = "@id/edtAddress"
			android:layout_width = "wrap_content" 
			android:layout_height = "wrap_content"
		/>
		<EditText
			android:id = "@+id/edtEmail" 
			android:layout_below = "@id/txtEmail" 
			android:inputType="textEmailAddress"
			android:hint = "@string/txtEmail"
			android:layout_width = "fill_parent" 
			android:layout_height = "wrap_content"/>
		
		<TextView
			android:id ="@+id/txtOldPass" 
			android:text = "@string/txtOldPass" 
			android:layout_below = "@id/edtEmail"
			android:layout_width = "wrap_content" 
			android:layout_height = "wrap_content"
		/>
		<EditText
			android:id = "@+id/edtOldPass" 
			android:layout_below = "@+id/txtOldPass" 
			android:inputType="textPassword"
			android:hint = "@string/txtOldPass"
			android:layout_width = "fill_parent" 
			android:layout_height = "wrap_content"/>
		
		<TextView
			android:id ="@+id/txtNewPass" 
			android:text = "@string/txtNewPass" 
			android:layout_below = "@id/edtOldPass"
			android:layout_width = "wrap_content" 
			android:layout_height = "wrap_content"
		/>
		<EditText
			android:id = "@+id/edtNewPass" 
			android:layout_below = "@+id/txtNewPass" 
			android:inputType="textPassword"
			android:hint = "@string/txtNewPass"
			android:layout_width = "fill_parent" 
			android:layout_height = "wrap_content"/>
		
		<TextView
			android:id ="@+id/txtConfirmPass" 
			android:text = "@string/txtConfirmPass" 
			android:layout_below = "@id/edtNewPass"
			android:layout_width = "wrap_content" 
			android:layout_height = "wrap_content"
		/>
		<EditText
			android:id = "@+id/edtConfirmPass" 
			android:layout_below = "@+id/txtConfirmPass" 
			android:inputType="textPassword"
			android:hint = "@string/txtConfirmPass"
			android:layout_width = "fill_parent" 
			android:layout_height = "wrap_content"/>
		
		<Button
			android:id = "@+id/btnContinue" 
			android:text = "@string/btnContinue" 
			android:layout_marginTop = "5dip"
			android:layout_width = "fill_parent"
			android:layout_height = "wrap_content"
			android:textSize = "20dip" 
			android:layout_centerInParent = "true" 
			android:layout_marginRight="30dip"
			android:layout_marginLeft="30dip"
			android:layout_below = "@id/edtConfirmPass"/>
	</RelativeLayout>
	
	</ScrollView>

</RelativeLayout>