<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout 
        android:id="@+id/relativelayout_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar"
        android:layout_marginBottom="4dip">
        
        <Button 
            android:id="@+id/btnAccount"
            android:text="@string/btnAccount"
            android:textColor="@color/white"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/button_back_pressed"
            android:onClick="btnAccount"/>
        
        <TextView 
            android:id="@+id/txtTitleBar"
            android:text="@string/txtTitleBarSupport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25dp"/>
    </RelativeLayout>
    
    <Button 
        android:id="@+id/btnVinacredit"
        android:text="@string/btnVinacredit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativelayout_title_bar"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="btnVinacredit"/>
    <Button 
        android:id="@+id/btnHotline"
        android:text="@string/btnHotline"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnVinacredit"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="btnHotline"/>
    <Button 
        android:id="@+id/btnInstruction"
        android:text="@string/btnInstruction"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnHotline"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="btnInstruction"/>

</RelativeLayout>