<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   <RelativeLayout 
        android:id="@+id/relativelayout_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar"
        android:layout_marginBottom="4dip">        
        <TextView 
            android:id="@+id/txtTitleBar"
            android:text="@string/txtTitleBarWrongPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"/>        
    </RelativeLayout>
    
   <EditText 
       android:id="@+id/edtEmail"
       android:hint="@string/txtEmail"
       android:inputType="textEmailAddress"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"/>
   
   
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
   <Button
       android:id="@+id/btnCancel"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
       android:text="@string/btnCancel"
       android:onClick="btnCancel" />

   <Button
       android:id="@+id/btnSend"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:layout_marginLeft="80dp"
       android:text="@string/btnSend" 
       android:onClick="btnSend"/>

	</LinearLayout>
</LinearLayout>