<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout 
        android:id="@+id/relativelayout_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar"
        android:layout_marginBottom="4dip">
        
        <Button 
            android:id="@+id/btnBack"
            android:text="@string/btnBack"
            android:textColor="@color/white"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/button_back_pressed"
            android:onClick="btnBack"/>
        
        <TextView 
            android:id="@+id/txtTitleBar"
            android:text="@string/txtTitleBarAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/btnSignOut"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/btnBack"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_continue_pressed"
            android:text="@string/btnSignOut"
            android:textColor="@color/white" 
            android:onClick="btnSignOut"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativelayout_title_bar" >
    <ImageView 
        android:id="@+id/imgUsername"
        android:layout_below="@id/relative"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:src="@drawable/chomsao" 
        android:contentDescription="@string/imgView"/>

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgUsername" 
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/txtUsername"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/txtEmail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center_horizontal" />
    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative"
        android:layout_margin="10dp"
        android:background="@drawable/customshape"
        >
    <ListView 
        android:id="@+id/listView1"        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:layout_margin="5dp">        
    </ListView>
	</LinearLayout>
	
</RelativeLayout>