<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout 
        android:id="@+id/relativelayout_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar"
        android:layout_marginBottom="4dip">
        
        <Button
            android:id="@+id/_btnAccount"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/button_back_pressed"
            android:text="@string/btnSaleAccount"
            android:textColor="@color/white" />
        
        <TextView 
            android:id="@+id/txtTitleBar"
            android:text="@string/txtTitleBarSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/_btnSaleCharge"
            android:layout_width="80dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@id/_btnAccount"
            android:layout_centerVertical="true"
            android:background="@drawable/button_continue_pressed"
            android:text="@string/btnSaleCharge"
            android:textColor="@color/white" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativelayout_title_bar" >
    <ImageView 
        android:id="@+id/imgUsername"
        android:layout_below="@id/relative"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@drawable/chomsao" 
        android:contentDescription="@string/imgView"/>

    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relative"
        android:layout_margin="10dp"
        android:background="@drawable/customshape"
        >
	</LinearLayout>
	
</RelativeLayout>